# 2048Game

./: .gitignore  CMakeLists.txt  README.md  board.h  color.h  main.cpp  menu.h
